# prompt-pillar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: diagnose_cache_miss.py  sample.jsonl
src/prompt_pillar/: __init__.py  __main__.py  diff.py  pillar.py  prefix.py
tests/: test_diff.py  test_pillar.py  test_prefix.py
