[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prompt-pillar"
version = "0.1.0"
description = "Diagnose why your LLM prompt cache hit ratio is low. Given N past message lists, find the largest stable prefix and the first message that diverges. Zero runtime deps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "anthropic",
  "openai",
  "claude",
  "prompt-cache",
  "cache",
  "diagnostics",
  "observability",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/prompt-pillar"
Source = "https://github.com/MukundaKatta/prompt-pillar"
Issues = "https://github.com/MukundaKatta/prompt-pillar/issues"

[project.scripts]
prompt-pillar = "prompt_pillar.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_pillar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
